<resources>
    <string name="app_name">Mini Theater</string>
    <string name="notifications">Notifications</string>
    <string name="app_logo">App Logo</string>
    <string name="search">Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="explore">Explore</string>
    <string name="downloads">Downloads</string>
    <string name="please_wait">Please Wait</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="star">Star</string>
    <string name="_0_10">0/10</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description…</string>
    <string name="_120_min">120 min.</string>
    <string name="_2018">2018</string>
    <string name="_720p">720p</string>
    <string name="_108_seeds">108 Seeds</string>
    <string name="_55_peers">55 Peers</string>
    <string name="_2_5_gb">2.5 GB</string>
    <string name="pg_13">PG-13</string>
    <string name="english">English</string>
    <string name="watch_trailer">Watch\nTrailer</string>
    <string name="action_adventure_sci_fi">Action, Adventure, Sci-fi…</string>
    <string name="play">Play</string>
    <string name="permission_request_rationale">The app requires permission to save files locally,
        and play videos. Please allow the app permission.</string>
    <string name="permission_request_from_app_settings">The app requires permission to save
        temporary cached data. Please go to application settings and allow all permissions.</string>
    <string name="no_downloads">No Downloads</string>
    <string name="downloading_0">Downloading… 0%</string>
    <string name="stop_download">Stop Download</string>
    <string name="pause">Pause</string>
    <string name="downloaded_0">Downloaded: 0%</string>
    <string name="_0_kb_s">0 KB/s</string>
    <string name="quality_720p">Quality: 720p</string>
    <string name="subtitles">Subtitles</string>
    <string name="genre">Genre</string>
    <string name="sort_by">Sort By</string>
    <string name="find_more">Find More</string>
    <string name="search_movies">Search Movies</string>
    <string name="size_700_mb">Size: 700 MB</string>
    <string name="download_0_kb_s">Download: 0 KB/s</string>
    <string name="upload_0_kb_s">Upload: 0 KB/s</string>
    <string name="uploader">Uploader</string>
    <string name="hollywood">Hollywood</string>
    <string name="others">Others</string>
    <string name="minus">Minus</string>
    <string name="subtitles_delay">Subtitles Delay</string>
    <string name="lock">Lock</string>
    <string name="hint">Hint</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="streams">Streams</string>
</resources>
