<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize20"
            android:text="@string/_720p"
            android:textStyle="bold"
            android:textColor="@color/textColorLightBackground"/>

        <TextView
            android:id="@+id/tvSeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize12"
            android:layout_below="@+id/tvQuality"
            android:layout_marginTop="10dp"
            android:text="@string/_108_seeds"
            android:background="#9b4600"
            android:padding="3dp"
            android:textColor="@color/textColorDarkBackground"/>

        <TextView
            android:id="@+id/tvPeers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize12"
            android:layout_below="@+id/tvQuality"
            android:layout_toEndOf="@+id/tvSeeds"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/_55_peers"
            android:background="#00539b"
            android:padding="3dp"
            android:textColor="@color/textColorDarkBackground"/>

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tvPlay"
            android:drawableTop="@drawable/ic_file_download_black_40dp"
            android:text="@string/_2_5_gb"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:id="@+id/tvPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:drawableTop="@drawable/ic_play_arrow_black_40dp"
            android:text="@string/play"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>