<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:contentDescription="@string/movie_cover"
            android:background="#eeeeee"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivCover"
            android:layout_alignBottom="@+id/ivCover"
            android:layout_alignStart="@+id/ivCover"
            android:layout_alignEnd="@+id/ivCover"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:clickable="false">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/play"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_arrow_white_40dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivCover"
            android:layout_toEndOf="@+id/ivCover"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize18"
            android:textColor="@color/textColorLightBackground"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/movie_title"/>

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ivCover"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize16"
            android:textColor="@color/textColorLightBackground"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:text="@string/quality_720p"/>

        <TextView
            android:id="@+id/tvSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ivCover"
            android:layout_below="@+id/tvQuality"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize14"
            android:textColor="@color/textColorLightBackground"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:text="@string/_0_kb_s"/>

        <TextView
            android:id="@+id/tvSeeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ivCover"
            android:layout_below="@+id/tvSpeed"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize14"
            android:textColor="@color/textColorLightBackground"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:text="@string/_108_seeds"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvSeeds"
            android:layout_toEndOf="@+id/ivCover"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:textSize="@dimen/textSize14"
                android:textColor="#088f00"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/downloaded_0"/>

            <ImageView
                android:id="@+id/ivPause"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/pause"
                android:src="@drawable/ic_file_download_black_40dp"/>

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/pause"
                android:src="@drawable/ic_delete_black_30dp"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>