<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <android.support.v7.widget.CardView
            android:id="@+id/detailsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize22"
                    android:textColor="@color/textColorLightBackground"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:text="@string/movie_title"/>

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:layout_below="@+id/tvTitle"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/movie_cover"
                    android:background="#eeeeee"/>

                <ImageView
                    android:id="@+id/ivStar"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/ivCover"
                    android:contentDescription="@string/star"
                    android:layout_alignTop="@+id/tvRating"
                    android:layout_alignBottom="@id/tvRating"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_star_filled_24dp"/>

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignTop="@+id/ivCover"
                    android:layout_toEndOf="@+id/ivStar"
                    android:textSize="@dimen/textSize18"
                    android:textColor="#fda101"
                    android:maxLines="1"
                    android:text="@string/_0_10"/>

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/ivCover"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize18"
                    android:textStyle="bold"
                    android:textColor="#00aa00"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/_2018"/>

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvRating"
                    android:layout_toEndOf="@+id/ivCover"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize16"
                    android:textColor="@color/textColorLightBackground"
                    android:maxLines="2"
                    android:text="@string/action_adventure_sci_fi"/>

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvMpaaRating"
                    android:layout_toEndOf="@+id/ivCover"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize16"
                    android:textColor="@color/textColorLightBackground"
                    android:maxLines="1"
                    android:text="@string/english"/>

                <TextView
                    android:id="@+id/tvMpaaRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignBottom="@+id/ivCover"
                    android:layout_toEndOf="@+id/ivCover"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/textSize12"
                    android:textColor="@color/textColorDarkBackground"
                    android:background="#009900"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:text="@string/pg_13"/>

                <TextView
                    android:id="@+id/tvTrailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_trailer"
                    android:gravity="center"
                    android:textSize="@dimen/textSize14"
                    android:textColor="@color/textColorLightBackground"
                    android:drawableTop="@drawable/ic_youtube_50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/ivCover"
                    android:padding="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bordered_rounded_rectangle_black"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/llTorrents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsCard"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <include layout="@layout/torrent_list_item"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTorrents"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/textSize16"
            android:textColor="@color/textColorLightBackground"
            android:gravity="center_vertical|start"
            android:text="@string/movie_description"/>

    </RelativeLayout>

</ScrollView>