<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize18"
            android:textColor="@color/textColorLightBackground"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/movie_title"/>

        <TextView
            android:id="@+id/tvSeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:textSize="@dimen/textSize14"
            android:textColor="#007700"
            android:maxLines="1"
            android:text="@string/_108_seeds"/>

        <TextView
            android:id="@+id/tvPeers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_toEndOf="@+id/tvSeeds"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize14"
            android:textColor="#0051bc"
            android:maxLines="1"
            android:text="@string/_55_peers"/>

        <TextView
            android:id="@+id/tvUploadedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/textSize14"
            android:textColor="#bc6400"
            android:maxLines="1"
            android:text="@string/uploader"/>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>